# Daft-xcfork

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: broken-link-checker.yml  build-docs.yml  build-wheel.yml  nightly-publish-s3.yml  notebook-checker.yml  pr-test-suite.yml  property-based-tests.yml  publish-platform.yml  publish-pypi.yml
daft/: __init__.py
daft/_parquet_bloom/: __init__.py  _preload.py  _walk.py
daft/catalog/: __iceberg.py
daft/daft/: __init__.pyi
daft/io/: writer.py
daft/io/iceberg/: __init__.py  _common.py  _compact.py  _expire.py  _iceberg.py  _remove_orphan.py  _rewrite_manifests.py  _zorder.py  iceberg_scan.py
daft/logical/: builder.py
simple/: index.html
simple/daft/: index.html
src/: lib.rs
src/daft-dashboard/frontend/: package-lock.json  package.json
src/daft-iceberg/: Cargo.toml
src/daft-iceberg/src/: errors.rs  lib.rs  options.rs  orphan.rs  planner.rs  python.rs  zorder.rs
src/daft-logical-plan/src/ops/: sort.rs  top_n.rs
src/daft-parquet-bloom/: Cargo.toml  build.rs
src/daft-parquet-bloom/shim/: shim.cpp  shim.h
src/daft-parquet-bloom/src/: lib.rs
src/daft-scan/src/: python.rs
tests/dataframe/: test_sort.py
tests/io/iceberg/actions/: _helpers.py  conftest.py  test_concurrent_ingest.py  test_expire_snapshots.py  test_remove_orphan_files.py  test_rewrite_binpack.py  test_rewrite_branch.py  test_rewrite_commit.py  test_rewrite_concurrency.py  test_rewrite_conflict_isolation.py  test_rewrite_dangling.py  test_rewrite_deletes.py  test_rewrite_extended.py  test_rewrite_manifests.py  test_rewrite_sort.py  (+4 more)
